live/local/kubernetes/o11y/kube-prometheus-stack/oidc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-grafana
  namespace: o11y
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  template:
    spec:
      containers:
        - name: grafana
