live/local/kubernetes/o11y/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: o11y
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - configured-by-environment
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: monitoring-grafana
          port: 80
          weight: 1
